--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 h2 {
-   font-family:"Arvo";
+   font-family:"Lithos Pro";
    font-weight: normal;
    font-size: 40px;
    text-align: center;
@@ -34,7 +34,7 @@ h2 {
 }
 
 h3 {
-   font-family: Oswald;
+   font-family: "Eurostile";
    font-weight: normal;
    font-size: 16px;
    text-align: center;
@@ -49,8 +49,8 @@ h3 {
 .center { margin: 0 auto; }
 .content{ margin: 0 auto; width: 960px; }
 .clear { clear: both; }
-a.lpanel { float: left; color: #e1e1e1; font-size: 12px; font-family:"Wellfleet"; text-decoration: none; margin: 7px 11px; }
-a.rpanel { float: right; color: #e1e1e1;  font-size: 12px; font-family:"Wellfleet"; text-decoration: none; margin: 7px 11px; }
+a.lpanel { float: left; color: #e1e1e1; font-size: 12px; font-family:"Merriweather"; text-decoration: none; margin: 7px 11px; }
+a.rpanel { float: right; color: #e1e1e1;  font-size: 12px; font-family:"Merriweather"; text-decoration: none; margin: 7px 11px; }
 
 a.lpanel:hover{ color: #fff; }
 a.rpanel:hover{ color: #fff; }
@@ -65,8 +65,8 @@ a.rpanel:hover{ color: #fff; }
 	margin-top: 30px;
 }
 
-#nav { width: 410px; float: right; margin-top: 20px; }
-#logo a { color: #fff; text-decoration: none; float: left; font-size: 30px; margin-top: 20px; color: #fff; font-family:"Wellfleet"; font-weight: bold; }
+#nav { width: 510px; float: right; margin-top: 20px; }
+#logo a { color: #fff; text-decoration: none; float: left; font-size: 30px; margin-top: 20px; color: #fff; font-family:"Lithos Pro"; font-weight: bold; }
 #nav ul{
 	list-style: none;
 	display: block;
@@ -80,9 +80,12 @@ a.rpanel:hover{ color: #fff; }
 	padding-left: 21px;
 }
 
-#nav li a { color: #fff; opacity:0.6; font-size: 16px; text-decoration: none; font-family: 'Wellfleet'; }
+#nav li a { color: #fff; opacity:0.6; font-size: 16px; text-decoration: none; font-family: 'Eurostile'; }
 #nav li a.active { color: #fff; opacity:1; border-bottom: 2px solid #fff; }
-#nav li a:hover { color: #fff; opacity:1;  }
+#nav li a:hover {
+	/* [disabled]color: #fff; */
+	opacity: 1;
+}
 
 
 
@@ -96,13 +99,13 @@ a.rpanel:hover{ color: #fff; }
   margin: 50px auto;
 }
    
- .author_name_white { font-family:"Wellfleet";  margin: 70px 0 0 75px; color: #fff; font-size: 20px; }  
- .author_name_gray { font-family:"Wellfleet";  margin: 70px 0 0 75px; color: #94a4a4; font-size: 20px; }  
+ .author_name_white { font-family:"Eurostile";  margin: 70px 0 0 75px; color: #fff; font-size: 20px; }  
+ .author_name_gray { font-family:"Eurostile";  margin: 70px 0 0 75px; color: #94a4a4; font-size: 20px; }  
  .quotes_container { width: 800px; margin: 0 auto; }
-#christmas_tree { background: url('../img/christmas-tree.png')no-repeat; width: 48px; height: 77px; margin: 0 auto; position: relative; bottom: -35px;}
+#camera { background: url('../img/camera.png')no-repeat; width: 112px; height: 77px; margin: 0 auto; position: relative; bottom: 15px;}
 #divider { background: url('../img/divider.png')no-repeat; width: 300px; height: 35px; margin: 0px auto 27px auto; }
-#ribbon { background: url('../img/ribbon.png')no-repeat; width: 251px; height: 48px; margin: 0 auto;  display: block; position: relative; top: -38px; }
-#snowflakes1 { background: url('../img/snowflakes.png')no-repeat; width: 24px; height: 21px; margin: 0 auto;  display: block; position: relative; bottom: -54px; left: -102px; }
+#ribbon { background: url('../img/ribbon.png')no-repeat; width: 300px; height: 48px; margin: 0 auto;  display: block; position: relative; top: -38px; }
+#videocamera{ background: url('../img/videocamera.png')no-repeat; width: 96px; height: 77px; margin: 0 auto;  display: block; position: relative; bottom: 15px;  }
 #snowflakes2 { background: url('../img/snowflakes.png')no-repeat; width: 24px; height: 21px; margin: 0 auto;  display: block; position: relative; bottom: -33px;  right: -100px; }
 
 
@@ -180,5 +183,5 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 /*= FOOTER 
 --------------------------------------------------------*/
 
-#copyright  { color: #fff; font-family:"Wellfleet";  font-size: 14px; margin-top: 100px; text-align: center;  }
+#copyright  { color: #fff; font-family:"Eurostile";  font-size: 14px; margin-top: 100px; text-align: center;  }
 #copyright  a { text-decoration: none; color: #fff;  }
