--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -149,10 +149,15 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 #slide2{
 	background-color: #ff3;
 	color: #333333;
-	height: 300px;
+	height: 390px;
 	margin: 0 auto;
 	overflow: hidden;
 	padding: 200px 0;
+	padding-bottom: 50px;
+    padding-top: 50px;
+    min-width: 100%;
+	top:0;
+	z-index: -100;
 }
 
 #slide3{
