--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -158,6 +158,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
     min-width: 100%;
 	top:0;
 	z-index: -100;
+	background-size: cover;
 }
 
 #slide3{
