--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -147,6 +147,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 }
 
 #slide2{
+	background:url('../img/slide1.jpg') 50% 0 no-repeat fixed;
 	background-color: #ff3;
 	color: #333333;
 	height: 390px;
@@ -159,7 +160,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	top:0;
 	z-index: -100;
 	background-size: cover;
-	background-position: 50% 50%;
+
 }
 
 #slide3{
