--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -147,7 +147,18 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 }
 
 #slide2{
-	
+	background:url('../img/slide1.jpg') 50% 0 no-repeat fixed;
+	background-color: #ff3;
+	color: #333333;
+	height: 390px;
+	margin: 0 auto;
+	overflow: hidden;
+	padding: 200px 0;
+	padding-bottom: 50px;
+    padding-top: 50px;
+    min-width: 100%;
+	top:0;
+	z-index: -100;
 	background-size: cover;
 	  position: absolute;
     left: 50%;
