--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -147,32 +147,25 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 }
 
 #slide2{
-	background:url('../img/slide1.jpg') 50% 0 no-repeat fixed;
-	background-color: #ff3;
-	color: #333333;
-	height: 390px;
-	margin: 0 auto;
-	overflow: hidden;
-	padding: 200px 0;
-	padding-bottom: 50px;
-    padding-top: 50px;
-    min-width: 100%;
-	top:0;
-	z-index: -100;
-	background-size: cover;
-	  position: absolute;
-    left: 50%;
-    top: 50%;
-    /* The following will size the video to fit the full container. Not necessary, just nice.*/
-    min-width: 100%;
-    min-height: 100%;
-    -webkit-transform: translate(-50%,-50%);
-    -moz-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-    z-index: 0;
-
+	    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
 }
+
+#slide2vid {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    min-height: 50%;
+    min-width: 50%;
+}
+
+
 
 #slide3{
 	background: url(../img/slide3.jpg) 50% 0 no-repeat fixed;
