--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -146,12 +146,14 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	background-size: cover;
 }
 
-#slide2{
+#slide2{ 
+
+position:relative;
 	background-color: #ff3;
 	color: #333333;
 	
 	z-index: -100;
-	    position: absolute;
+	   
     top: -50%;
     left: -50%;
     width: 200%;
@@ -159,11 +161,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 }
 
 #slide2vid {
-
-
-
-
-    position: absolute;
+ position: relative;
     top: 0;
     bottom: 0;
     right: 0;
