--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -146,30 +146,19 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	background-size: cover;
 }
 
-#slide2{ 
-
-position:relative;
+#slide2{
 	background-color: #ff3;
 	color: #333333;
-	
+	height: 300px;
+	margin: 0 auto;
+	overflow: hidden;
+	padding: 200px 0;
+	padding-bottom: 50px;
+    padding-top: 50px;
+    min-width: 100%;
+    position: fixed;
+	top:0;
 	z-index: -100;
-	   
-    top: 50%;
-    left: 50%;
-    width: 200%;
-    height: 200%;
-}
-
-#slide2vid {
-    position: relative;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    margin: auto;
-    min-height: 50%;
-    min-width: 50%;
-
 }
 
 #slide3{
