--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -11,7 +11,14 @@ body{
 	margin: 0;
 	padding: 0;
 	width: 100%;
+	
 }
+
+video {
+  width: 100%    !important;
+  height: auto   !important;
+}
+
 
 h1 { 
     font-family:"Arvo";
