--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -150,15 +150,8 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	background-color: #ff3;
 	color: #333333;
 	height: 300px;
-	margin: 0 auto;
-	overflow: hidden;
-	padding: 200px 0;
-	padding-bottom: 50px;
-    padding-top: 50px;
-    min-width: 100%;
-    position: fixed;
-	top:0;
-	z-index: -100;
+	margin: 0;
+   
 }
 
 #slide3{
