--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -154,6 +154,22 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
    
 }
 
+#slide2vid {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    min-height: 50%;
+    min-width: 50%;
+}
+
+video {
+  width: 100%    ;
+  height: auto   ;
+}
+
 #slide3{
 	background: url(../img/slide3.jpg) 50% 0 no-repeat fixed;
 	color: #fff;
