--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -156,13 +156,14 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 
 #slide2vid {
     position: relative;
-    top: 0;
+    top: -300;
     bottom: 0;
     right: 0;
     left: 0;
     margin: auto;
     min-height: 50%;
     min-width: 50%;
+	overflow:hidden;
 }
 
 video {
