--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -152,7 +152,8 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	height: 300px;
 	margin: 0;
 	overflow:hidden;
-	padding: -100px 0 0 0;
+	padding: -00px 0 0 0;
+	top: -330px;
    
 }
 
