--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -152,20 +152,21 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	height: 300px;
 	margin: 0;
 	overflow:hidden;
-	padding: -200px 0 0 0;
-	top: 330px;
+	padding: 0 0 0 0;
+	
    
 }
 
 #slide2vid {
     position: relative;
-    top: 0;
+    top: -30;
     bottom: 0;
     right: 0;
     left: 0;
     margin: auto;
     min-height: 50%;
     min-width: 50%;
+	top: -330px;
 	
 }
 
