--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -159,14 +159,14 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 
 #slide2vid {
     position: relative;
-    top: -30;
+    top: -340;
     bottom: 0;
     right: 0;
     left: 0;
     margin: auto;
     min-height: 50%;
     min-width: 50%;
-	top: -330px;
+	tpadding: 200px 0 260px 0;
 	
 }
 
