--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -166,7 +166,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
     margin: auto;
     min-height: 50%;
     min-width: 50%;
-	tpadding: 200px 0 260px 0;
+	padding: 200px 0 260px 0;
 	
 }
 
