--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -152,21 +152,18 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	height: 300px;
 	margin: 0;
 	overflow:hidden;
-	padding: 0 0 0 0;
-	
    
 }
 
 #slide2vid {
     position: relative;
-    top: -340;
+    top: 340px;
     bottom: 0;
     right: 0;
     left: 0;
     margin: auto;
     min-height: 50%;
     min-width: 50%;
-	padding: 200px 0 260px 0;
 	
 }
 
