--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -157,7 +157,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 
 #slide2vid {
     position: relative;
-    top: 340px;
+    padding: 200px 10 260px 30;
     bottom: 0;
     right: 0;
     left: 0;
