--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -156,11 +156,12 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 }
 
 #slide2vid {
-    position: relative;
+    position: absolute;
     padding: 200px 10 260px 30;
     bottom: 0;
     right: 0;
     left: 0;
+	top:-40px;
     margin: auto;
     min-height: 50%;
     min-width: 50%;
