--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -147,24 +147,22 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 }
 
 #slide2{
-	background-color: #ff3;
-	color: #333333;
-	height: 300px;
-	margin: 50;
-	top:-400px;
-	overflow:hidden;
+	 width: 200px;
+            height: 200px;
+            position:relative;
+            overflow:hidden;
    
 }
 
 #slide2vid {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
-	top: -120px;
-    margin: auto;
-    min-height: 50%;
-    min-width: 50%;
+ position: absolute;
+            top: -20px;
+            right: 0;
+            width: 100px;
+            height: 100px;
+            border: solid 1px;
+            background-color: #99CCCC;
+            z-index: 99999999 !important;
 	
 }
 
