--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -147,25 +147,22 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 }
 
 #slide2{
-	 width: 200px;
-            height: 200px;
-            position:relative;
-			    width: 200px;
-            overflow: hidden;
-            background-color: #CCCCCC;
-            z-index: 1;
+	background-color: #ff3;
+	color: #333333;
+	height: 300px;
+	margin: 0;
+	overflow:hidden;
    
 }
 
 #slide2vid {
- position: absolute;
-            top: -203px;
-            right: 0;
-            width: 100px;
-            height: 100px;
-            border: solid 1px;
-            background-color: #99CCCC;
-            z-index: 99999999 !important;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    min-height: 50%;
+    min-width: 50%;
 	
 }
 
