--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -47,7 +47,7 @@ h3 {
 
 
 .center { margin: 0 auto; }
-.content{ margin: 0 auto; width: 960px; }
+.content{ margin: 0 auto; width: 960px; z-index: 9999;}
 .clear { clear: both; }
 a.lpanel { float: left; color: #e1e1e1; font-size: 12px; font-family:"Merriweather"; text-decoration: none; margin: 7px 11px; }
 a.rpanel { float: right; color: #e1e1e1;  font-size: 12px; font-family:"Merriweather"; text-decoration: none; margin: 7px 11px; }
@@ -152,6 +152,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	height: 300px;
 	margin: 0;
 	overflow:hidden;
+	z-index: 99;
    
 }
 
