--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -156,6 +156,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
    
 }
 #vidtypecontent{
+	background-color:#CF0
 	color: #333333;
 	height: 300px;
 	margin: 0;
