--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -147,6 +147,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 }
 
 #slide2{
+	background-color:#ee0;
 	color: #333333;
 	height: 300px;
 	margin: 0;
