--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -153,7 +153,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	margin: 0;
 	overflow:hidden;
 	z-index: 99999;
-	top:30px;
+	top:0;
    
 }
 #vidtypecontent{
@@ -163,7 +163,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	margin: 0;
 	overflow:hidden;
 	z-index: 1;
-	top:30px;
+	top:0;
    
 }
 
@@ -188,12 +188,14 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
     margin: auto;
     min-height: 50%;
     min-width: 50%;
+	top:0;
 	
 }
 
 video {
   width: 100%    ;
   height: auto   ;
+  top:0;
 }
 
 #slide3{
