--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -170,6 +170,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 
 #wrapper {
     position: relative;
+	height: 300px;
 	overflow:hidden;
 }
 #wrapper div, #wrapper video {
