--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -183,6 +183,8 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 
 #blanker{
 	top: 0;
+	border-width:thick;
+	border-color:#0F6;
 }
 
 
