--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -174,11 +174,15 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	overflow:hidden;
 	top: -200px;
 	z-index: 1;
+	border-width:thick;
+	border-color:#5ff;
 }
 #wrapper div, #wrapper video {
     position: absolute;
     top: 0;
 	z-index: 9999;
+	border-width:thick;
+	border-color:#2ew;
 }
 
 #blanker{
