--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -176,6 +176,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	z-index: 1;
 	border: 3px;
 	border-color:#5ff;
+	padding: 200px 0 260px 0;
 }
 #wrapper div, #wrapper video {
     position: absolute;
@@ -183,12 +184,14 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	z-index: 9999;
 	border: 3px;
 	border-color:#2ew;
+	padding: 200px 0 260px 0;
 }
 
 #blanker{
 	top: 0;
 	border: 3px;
 	border-color:#0F6;
+	padding: 200px 0 260px 0;
 }
 
 
