--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -164,6 +164,12 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	overflow:hidden;
 }
 
+#wrapper2 {
+    position: relative;
+	height: 800px;
+	overflow:hidden;
+}
+
 #wrapper div, #wrapper video {
     position: absolute;
     top: 0;
