--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -165,6 +165,19 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 }
 
 
+#urapper div, #urapper blanker {
+    position: absolute;
+	height: 500px;
+    top: 0;
+}
+
+#urapper {
+    position: relative;
+	height: 700px;
+	overflow:hidden;
+}
+
+
 #wrapper div, #wrapper video {
     position: absolute;
     top: 0;
