--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -167,7 +167,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 
 #urapper div, #urapper blanker {
     position: absolute;
-	height: 500px;
+	height: 1500px;
     top: 0;
 }
 
@@ -177,6 +177,9 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	overflow:hidden;
 }
 
+#taller{
+	height: 700px;
+}
 
 #wrapper div, #wrapper video {
     position: absolute;
