--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -153,7 +153,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	margin: 0;
 	overflow:hidden;
 	top:0;   
-	padding: 200px 55 260px 55;
+	padding: 200px 55px 260px 55px;
 }
 
 
