--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -152,8 +152,9 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	height: 300px;
 	margin: 0;
 	overflow:hidden;
-	top:0;   
-	padding: 200px 55px 260px 55px;
+	top:0;  
+	left:150px; 
+
 }
 
 
