--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -142,7 +142,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	color: #fff;
 	height: 600px;
 	margin: 0;
-	
+	padding: 200px 0 260px 0;
 	background-size: cover;
 	z-index: 99999;
 }
@@ -152,8 +152,8 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	height: 300px;
 	margin: 0;
 	overflow:hidden;
-	top:0;  
-
+	top:0;   
+	padding: 200px 55px 260px 55px;
 }
 
 
