--- a/css/layout1.sass
+++ b/css/layout1.sass
@@ -43,7 +43,7 @@ img
 .barshade
   height: 680px
   width: 100%
-  background-color: rgba(123, 2, 2, 23)
+  background-color: rgba(0, 0, 0, 0.3)
   position: absolute
   top: -629px
   margin-top: -50px
@@ -62,27 +62,28 @@ img
   margin-top: -50px
 
 .fore-bird
-  width: 960px
+  width: 100%
   height: 733px
   background:
     image: url(../images/fore-bird.png)
     repeat: no-repeat
     position: right bottom
   position: absolute
-  left: 50%
-  margin-left: -480px
-  top: 380px
+  float: right
+  margin-left: 10px
+  top: 100px
 
 .back-bird
-  width: 960px
-  height: 298px
+  width: 1164px
+  height: 600px
   background:
     image: url(../images/back-bird.png)
     repeat: no-repeat
     position: top left
   position: absolute
   left: 50%
-  margin-left: -480px
+  margin-left: -782px
+  top: 200px
 
 
 
