--- a/css/style.css
+++ b/css/style.css
@@ -892,7 +892,7 @@ img {
 .barshade {
   height: 680px;
   width: 100%;
-  background-color: #7b0202;
+  background-color: rgba(0, 0, 0, 0.3);
   position: absolute;
   top: -629px;
   margin-top: -50px; }
@@ -908,25 +908,26 @@ img {
   margin-top: -50px; }
 
 .fore-bird {
-  width: 960px;
+  width: 100%;
   height: 733px;
   background-image: url(../images/fore-bird.png);
   background-repeat: no-repeat;
   background-position: right bottom;
   position: absolute;
-  left: 50%;
-  margin-left: -480px;
-  top: 380px; }
+  float: right;
+  margin-left: 10px;
+  top: 100px; }
 
 .back-bird {
-  width: 960px;
-  height: 298px;
+  width: 1164px;
+  height: 600px;
   background-image: url(../images/back-bird.png);
   background-repeat: no-repeat;
   background-position: top left;
   position: absolute;
   left: 50%;
-  margin-left: -480px; }
+  margin-left: -782px;
+  top: 200px; }
 
 .clothes-pics {
   margin-bottom: 100px; }
