--- a/index.jade
+++ b/index.jade
@@ -36,43 +36,50 @@ html(lang="en")
 
       article
 
-        h1 Unique e-Style
+        h1 My Work
 
         hr
 
         .clothes-pics
             .row.img-row
-              figure.columns.four
-                img(src="images/model1.jpg")
-                figcaption Blackbird Sweater - <strong>$15</strong>
-              figure.columns.four
-                img(src="images/model2.jpg")
-                figcaption Blackbird Sweater - <strong>$25</strong>
-              figure.columns.four
-                img(src="images/model3.jpg")
-                figcaption Blackbird Sweater - <strong>$75</strong>
+              figure.columns.two
+                img(src="images/brand1.jpg")
+                figcaption Drupal, WordPress, Moodle<strong>+</strong>
+              figure.columns.two
+                img(src="images/brand2.jpg")
+                figcaption Drupal, Wix, CSS3
+              figure.columns.two
+                img(src="images/brand3.jpg")
+                figcaption HTML5, FLASH, ActionScript
+              figure.columns.two
+                img(src="images/brand4.jpg")
+                figcaption InDesign, Quark, SAP, MSOffice
+              figure.columns.two
+                img(src="images/brand5.jpg")
+                figcaption Package Design, Illustrator
+              figure.columns.two
+                img(src="images/brand6.jpg")
+                figcaption Final Cut, Cinematography, Premiere
 
             .row.img-row
-              figure.columns.four
-                img(src="images/model1.jpg")
-                figcaption Blackbird Sweater - <strong>$5</strong>
-              figure.columns.four
-                img(src="images/model2.jpg")
-                figcaption Blackbird Sweater - <strong>$5</strong>
-              figure.columns.four
-                img(src="images/model3.jpg")
-                figcaption Blackbird Sweater - <strong>$5</strong>
-
-            .row.img-row
-              figure.columns.four
-                img(src="images/model1.jpg")
-                figcaption Blackbird Sweater - <strong>$5</strong>
-              figure.columns.four
-                img(src="images/model2.jpg")
-                figcaption Blackbird Sweater - <strong>$5</strong>
-              figure.columns.four
-                img(src="images/model3.jpg")
-                figcaption Blackbird Sweater - <strong>$5</strong>
+              figure.columns.two
+                img(src="images/brand7.jpg")
+                figcaption Photoshop, Branding, Photography, ASP
+              figure.columns.two
+                img(src="images/brand8.jpg")
+                figcaption Tradeshow, Digital Signage, Billboards
+              figure.columns.two
+                img(src="images/brand9.jpg")
+                figcaption Interactive DVD, ActionScipt, Javascript
+              figure.columns.two
+                img(src="images/brand10.jpg")
+                figcaption UX Design, PHP, ASP, SQL, Branding, Social Media
+              figure.columns.two
+                img(src="images/brand11.jpg")
+                figcaption Flash, SEO, SMM, Animation
+              figure.columns.two
+                img(src="images/brand12.jpg")
+                figcaption Drupal, Photography, Project Management
 
 
 
@@ -88,7 +95,7 @@ html(lang="en")
         hr
 
 
-        h1 Fine Tayloring
+        h1 My Skills
 
         hr
 
@@ -98,13 +105,13 @@ html(lang="en")
 
         .large-window
           .window-tint
-            .promo-text Eze's Suits
-              strong <span>from</span> $199
-              a(href="").window-cta Buy Me
+            .promo-text Give me a Call
+              strong <span>Cell 416-SER-IOUS </span>
+              a(href="").window-cta Call Now
 
 
 
-        h1 Rich History
+        h1 I'm looking foward to hearing from you
 
         hr
 
