--- a/css/style.css
+++ b/css/style.css
@@ -860,7 +860,7 @@ body {
   font-family: "Open Sans", sans-serif; }
 
 h1 {
-  color: #ccc;
+  color: #68696a;
   weight: 300; }
 
 figure {
@@ -868,14 +868,19 @@ figure {
 
 .content {
   position: relative;
-  background: white;
+  background: #9adbfa;
   margin-bottom: 400px;
   overflow: hidden; }
   .content article {
-    padding: 100px 0;
-    max-width: 640px;
+    padding: 50px 0;
+    max-width: 1024px;
     margin: 0 auto;
     text-align: center; }
+    .content article hr {
+      height: 2px;
+      border: none;
+      background-color: #68696a;
+      width: 500px; }
 
 img {
   max-width: 100%; }
@@ -892,7 +897,7 @@ img {
 .barshade {
   height: 680px;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.6);
   position: absolute;
   top: -629px;
   margin-top: -50px; }
@@ -905,7 +910,7 @@ img {
   background-repeat: no-repeat;
   position: absolute;
   top: 50%;
-  margin-top: -50px; }
+  margin-top: -105px; }
 
 .fore-bird {
   width: 100%;
@@ -916,7 +921,7 @@ img {
   position: absolute;
   float: right;
   margin-left: 10px;
-  top: 100px; }
+  top: 150px; }
 
 .back-bird {
   width: 1164px;
@@ -927,12 +932,12 @@ img {
   position: absolute;
   left: 50%;
   margin-left: -782px;
-  top: 200px; }
+  top: 150px; }
 
 .clothes-pics {
   margin-bottom: 100px; }
   .clothes-pics figure {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     position: relative;
     opacity: 0;
     transform: translateX(30px);
@@ -944,25 +949,25 @@ img {
       transform: translateX(0px); }
     .clothes-pics figure img {
       display: block;
-      transform: scale(1);
+      transform: scale(1.9);
       transition: all 0.3s ease-in-out; }
     .clothes-pics figure:hover figcaption {
       left: 0%; }
     .clothes-pics figure:hover img {
-      transform: scale(1.1); }
+      transform: scale(1); }
   .clothes-pics figcaption {
     position: absolute;
     bottom: 10px;
     left: -100%;
-    background: black;
-    color: yellow;
+    background: rgba(204, 204, 204, 0.6);
+    color: black;
     padding: 2px 8px;
     font-size: 11px;
     transition: all 0.3s ease-in-out; }
 
 .large-window {
   height: 640px;
-  background-image: url(../images/model2.jpg);
+  background-image: url(../images/longshot.jpg);
   background-position: center 0px;
   background-repeat: repeat-y;
   background-attachment: fixed;
