--- a/index.jade
+++ b/index.jade
@@ -43,43 +43,55 @@ html(lang="en")
         .clothes-pics
             .row.img-row
               figure.columns.two
-                img(src="images/brand1.jpg")
-                figcaption Drupal, WordPress, Moodle<strong>+</strong>
+                a(href="http://www.ccnm.edu", target="_blank")
+                  img(src="images/brand1.jpg")
+                  figcaption Drupal, WordPress, Moodle<strong>+</strong>
               figure.columns.two
-                img(src="images/brand2.jpg")
-                figcaption Drupal, Wix, CSS3
+                a(href="http://www.ccnmihc.ca", target="_blank")
+                  img(src="images/brand2.jpg")
+                  figcaption Drupal, Wix, CSS3
               figure.columns.two
-                img(src="images/brand3.jpg")
-                figcaption HTML5, FLASH, ActionScript
+                a(href="https://web.archive.org/web/20010217183633/http://www.freshheads.labatt.com/", target="_blank")
+                  img(src="images/brand3.jpg")
+                  figcaption HTML5, FLASH, ActionScript
               figure.columns.two
-                img(src="images/brand4.jpg")
-                figcaption InDesign, Quark, SAP, MSOffice
+                a(href="http://wattisretail.com/projectPage.php?id=147", target="_blank")
+                  img(src="images/brand4.jpg")
+                  figcaption InDesign, Quark, SAP, MSOffice
               figure.columns.two
-                img(src="images/brand5.jpg")
-                figcaption Package Design, Illustrator
+                a(href="http://lexcorpweb.com/images/Projects/other/BIG_Deloitte1.png", target="_blank")
+                  img(src="images/brand5.jpg")
+                  figcaption Package Design, Illustrator
               figure.columns.two
-                img(src="images/brand6.jpg")
-                figcaption Final Cut, Cinematography, Premiere
+                a(href="http://upperviewhomes.com", target="_blank")
+                  img(src="images/brand6.jpg")
+                  figcaption Final Cut, Cinematography, Premiere
 
             .row.img-row
               figure.columns.two
-                img(src="images/brand7.jpg")
-                figcaption Photoshop, Branding, Photography, ASP
+                a(href="http://www.yak.com", target="_blank")
+                  img(src="images/brand7.jpg")
+                  figcaption Photoshop, Branding, Photography, ASP
               figure.columns.two
-                img(src="images/brand8.jpg")
-                figcaption Tradeshow, Digital Signage, Billboards
+                a(href="http://www.drbdiet.ca", target="_blank")
+                  img(src="images/brand8.jpg")
+                  figcaption Tradeshow, Digital Signage, Billboards
               figure.columns.two
-                img(src="images/brand9.jpg")
-                figcaption Interactive DVD, ActionScipt, Javascript
+                a(href="http://www.satinfinish.com", target="_blank")
+                  img(src="images/brand9.jpg")
+                  figcaption Interactive DVD, ActionScipt, Javascript
               figure.columns.two
-                img(src="images/brand10.jpg")
-                figcaption UX Design, PHP, ASP, SQL, Branding, Social Media
+                a(href="http://www.oicc.ca", target="_blank")
+                  img(src="images/brand10.jpg")
+                  figcaption UX Design, PHP, ASP, SQL, Branding, Social Media
               figure.columns.two
-                img(src="images/brand11.jpg")
-                figcaption Flash, SEO, SMM, Animation
+                a(href="http://www.lifematescanada.com", target="_blank")
+                  img(src="images/brand11.jpg")
+                  figcaption Flash, SEO, SMM, Animation
               figure.columns.two
-                img(src="images/brand12.jpg")
-                figcaption Drupal, Photography, Project Management
+                a(href="http://ccnmbntc.ca", target="_blank")
+                  img(src="images/brand12.jpg")
+                  figcaption Drupal, Photography, Project Management
 
 
 
@@ -90,7 +102,7 @@ html(lang="en")
 
 
 
-        p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.
+        p I am a Digital Media Professional with over ten years of design, development and web/video engineering experience. Proven skill in overseeing projects from conception to go-live. Demonstrated ability to engage and work closely with all levels up to the C-Suite.
 
         hr
 
@@ -99,7 +111,7 @@ html(lang="en")
 
         hr
 
-        p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.
+        p I excel with Social Media Planning and Strategy. I drove marketing plans and strategies to market and promote educational and healthcare events through targeted social media campaigns, web content curation (infographics, videos), in-house print campaigns, student, donors, and alumni e-newsletters.
 
         hr
 
@@ -115,7 +127,7 @@ html(lang="en")
 
         hr
 
-        p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.
+        p I love creating digital assests and Viral Video Content. I've launched videography campaigns through GoPro POV stunts and DSLR filming techniques to engage target audiences through links, blogs and e-marketing campaigns
 
         hr
 
