--- a/css/layout1.sass
+++ b/css/layout1.sass
@@ -2,6 +2,7 @@
 
 body
   font-family: "Open Sans", sans-serif
+  background-color: rgb(154, 219, 250)
 
 h1
   color: #68696a
@@ -24,13 +25,19 @@ figure
     max-width: 1024px
     margin: 0 auto
     text-align: center
+    p
+      font-size: 18px
+    h1
+      font:
+        size: 28px
+
     //background-color: white
 
     hr
       height: 2px
       border: none
       background-color: #68696a
-      width: 500px
+      width: 640px
 
 img
   max-width: 100%
@@ -100,7 +107,7 @@ img
 // Model Grid
 
 .clothes-pics
-  margin-bottom: 100px
+  margin-bottom: 20px
 
   figure
     margin-bottom: 40px
@@ -129,7 +136,7 @@ img
 
   figcaption
     position: absolute
-    bottom: 10px
+    bottom: 0px
     left: -100%
     background: rgba(204, 204, 204, 0.6)
     color: black
@@ -142,7 +149,7 @@ img
 // large-window
 
 .large-window
-  height: 640px
+  height: 1024px
   background:
     image: url(../images/longshot.jpg)
     position: center 0px
@@ -230,7 +237,7 @@ footer
   z-index: -1
 
   .footer-stuff
-    max-width: 640px
+    max-width: 1024px
     margin: 0 auto
 
   a
