--- a/index.jade
+++ b/index.jade
@@ -36,62 +36,62 @@ html(lang="en")
 
       article
 
-        h1 My Work
+        h1 M Y  &nbsp;&nbsp;  W O R K
 
         hr
 
         .clothes-pics
             .row.img-row
-              figure.columns.two
+              figure.columns.three
                 a(href="http://www.ccnm.edu", target="_blank")
                   img(src="images/brand1.jpg")
-                  figcaption Drupal, WordPress, Moodle<strong>+</strong>
-              figure.columns.two
+                  figcaption Drupal, WordPress, Moodle & More
+              figure.columns.three
                 a(href="http://www.ccnmihc.ca", target="_blank")
                   img(src="images/brand2.jpg")
                   figcaption Drupal, Wix, CSS3
-              figure.columns.two
+              figure.columns.three
                 a(href="https://web.archive.org/web/20010217183633/http://www.freshheads.labatt.com/", target="_blank")
                   img(src="images/brand3.jpg")
                   figcaption HTML5, FLASH, ActionScript
-              figure.columns.two
+              figure.columns.three
                 a(href="http://wattisretail.com/projectPage.php?id=147", target="_blank")
                   img(src="images/brand4.jpg")
-                  figcaption InDesign, Quark, SAP, MSOffice
-              figure.columns.two
+                  figcaption InDesign, Quark,SAP, MSOffice
+            .row.img-row
+              figure.columns.three
                 a(href="http://lexcorpweb.com/images/Projects/other/BIG_Deloitte1.png", target="_blank")
                   img(src="images/brand5.jpg")
                   figcaption Package Design, Illustrator
-              figure.columns.two
+              figure.columns.three
                 a(href="http://upperviewhomes.com", target="_blank")
                   img(src="images/brand6.jpg")
-                  figcaption Final Cut, Cinematography, Premiere
-
-            .row.img-row
-              figure.columns.two
+                  figcaption FCP, Premiere,Cinematography
+              figure.columns.three
                 a(href="http://www.yak.com", target="_blank")
                   img(src="images/brand7.jpg")
                   figcaption Photoshop, Branding, Photography, ASP
-              figure.columns.two
+              figure.columns.three
                 a(href="http://www.drbdiet.ca", target="_blank")
                   img(src="images/brand8.jpg")
-                  figcaption Tradeshow, Digital Signage, Billboards
-              figure.columns.two
+                  figcaption Tradeshow, e-Signage,  Billboards
+            .row.img-row
+              figure.columns.three
                 a(href="http://www.satinfinish.com", target="_blank")
                   img(src="images/brand9.jpg")
-                  figcaption Interactive DVD, ActionScipt, Javascript
-              figure.columns.two
+                  figcaption Interactive DVD,  ActionScipt, Javascript
+              figure.columns.three
                 a(href="http://www.oicc.ca", target="_blank")
                   img(src="images/brand10.jpg")
-                  figcaption UX Design, PHP, ASP, SQL, Branding, Social Media
-              figure.columns.two
+                  figcaption UX Design, PHP, ASP, SQL,<br> Branding, Social Media
+              figure.columns.three
                 a(href="http://www.lifematescanada.com", target="_blank")
                   img(src="images/brand11.jpg")
-                  figcaption Flash, SEO, SMM, Animation
-              figure.columns.two
+                  figcaption Flash, SEO,  SMM, Animation
+              figure.columns.three
                 a(href="http://ccnmbntc.ca", target="_blank")
                   img(src="images/brand12.jpg")
-                  figcaption Drupal, Photography, Project Management
+                  figcaption Drupal, Photography,  Project Management
 
 
 
@@ -107,11 +107,11 @@ html(lang="en")
         hr
 
 
-        h1 My Skills
+        h1 MY SKILLS
 
         hr
 
-        p I excel with Social Media Planning and Strategy. I drove marketing plans and strategies to market and promote educational and healthcare events through targeted social media campaigns, web content curation (infographics, videos), in-house print campaigns, student, donors, and alumni e-newsletters.
+        p I excel with Social Media Planning and Strategy. I drove marketing plans and strategies to market and promoted educational and healthcare events through targeted social media campaigns, web content curation (infographics, videos), in-house print campaigns, student, donors, and alumni e-newsletters.
 
         hr
 
@@ -135,22 +135,22 @@ html(lang="en")
         .blog-posts.row
 
           .post.columns.four.post-1
-            h5 Post Title
+            h5 Thanks, for the new Design
             img(src="images/posts/one.jpg")
-            p Incididunt ut labore et dolore magna.
-            p: a.button(href="")  More info
+            p The ability to create, cast, direct, and engineer this viral content was a huge milestome for our department
+            p: a.button(href="http://myccnm2012.tumblr.com", target="_blank")  View Campaign
 
           .post.columns.four.post-2
-            h5 Post Title
+            h5 I love this video. Great Work
             img(src="images/posts/two.jpg")
-            p Lorem ipsum dolor sit amet.
-            p: a.button(href="") Read dude
+            p The Cinematography and interactive digital presence has transformed our marketing and communication efforts.
+            p: a.button(href="https://vimeo.com/65852728", target="_blank") Watch Videos
 
           .post.columns.four.post-3
-            h5 Post Title
+            h5 It looks so good. Web Design greatness
             img(src="images/posts/three.jpg")
-            p Duis aute irure dolor in reprehenderit.
-            p: a.button(href="") Read More Dude
+            p The web development and digital project execution was flawless. Thank you for helping us meet our company goals
+            p: a.button(href="http://annualreport.ccnm.edu", target="_blank") View Site
 
     footer
       .row.footer-stuff
@@ -163,19 +163,22 @@ html(lang="en")
             li: a(href="") Instagram
 
         .columns.three
-          strong OTHER STUFF
+          strong Top 5 Sites
           ul
-            li: a(href="") Red Robin
-            li: a(href="") Emerald Eagle
-            li: a(href="") Crimson Crane
-            li: a(href="") Auburn Abbot
+            li: a(href="http://www.ezestudio.com", target="_blank") Eze Studio
+            li: a(href="http://www.mediakingdoms.com", target="_blank") Media Kingdoms
+            li: a(href="http://annualreport.ccnm.edu", target="_blank") Annual Reports(WordPress)
+            li: a(href="http://www.ccnm.edu/sites/ccnm/files/flashcontent/ar_final.swf", target="_blank") Annual Reports(Flash)
+            li: a(href="http://myccnm2012.tumblr.com/", target="_blank") Annual Reports(Social Media)
 
         .columns.six
-          p <strong>Sign Up for the newsletter</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          h1 Wait, don't go
+          p <strong> I promise... </strong>I wont send you an email unless it's really awesome.
 
           form.row
             .columns.eight
               input.u-full-width(type="email" placeholder="Your Email")
+              input.hidden(type="hidden" name="recipient" value="info@ezenmezi.com")
             .columns.four
               input.button-primary(type="submit")
 
