--- a/css/layout1.sass
+++ b/css/layout1.sass
@@ -49,10 +49,10 @@ img
 
 .bird-boxes
   position: relative
-  height: 600px
+  height: 640px
   background:
     image: url(../images/bird-bg.jpg)
-    size: auto 600px
+    size: auto 100%
     position: top center
     attachment: fixed
   overflow: hidden
@@ -76,22 +76,34 @@ img
     repeat: no-repeat
   position: absolute
   top: 50%
-  margin-top: -105px
+  margin-top: -200px
 
 .fore-bird
   width: 100%
-  height: 733px
+  height: 873px
   background:
     image: url(../images/fore-bird.png)
     repeat: no-repeat
     position: right bottom
   position: absolute
   float: right
-  margin-left: 10px
-  top: 150px
+  margin-left: 0px
+  top: 100px
+
+.fore-bird-lefty
+  width: 100%
+  height: 873px
+  background:
+    image: url(../images/fore-bird_left.png)
+    repeat: no-repeat
+    position: left bottom
+  position: absolute
+  float: left
+  margin-left: 0px
+  top: 0px
 
 .back-bird
-  width: 1164px
+  width: 1410px
   height: 600px
   background:
     image: url(../images/back-bird.png)
@@ -99,8 +111,8 @@ img
     position: top left
   position: absolute
   left: 50%
-  margin-left: -782px
-  top: 150px
+  margin-left: -952px
+  top: 205px
 
 
 
