--- a/index.jade
+++ b/index.jade
@@ -29,6 +29,7 @@ html(lang="en")
       .back-bird
       .logo
       .fore-bird
+      .fore-bird-lefty
       .barshade
 
 
@@ -165,8 +166,8 @@ html(lang="en")
         .columns.three
           strong Top 5 Sites
           ul
-            li: a(href="http://www.ezestudio.com", target="_blank") Eze Studio
-            li: a(href="http://www.mediakingdoms.com", target="_blank") Media Kingdoms
+            li: a(href="http://www.ezestudio.com", target="_blank" title="(Freelance Site)") Eze Studio
+            li: a(href="http://www.mediakingdoms.com", target="_blank" title="Company Site") Media Kingdoms
             li: a(href="http://annualreport.ccnm.edu", target="_blank") Annual Reports(WordPress)
             li: a(href="http://www.ccnm.edu/sites/ccnm/files/flashcontent/ar_final.swf", target="_blank") Annual Reports(Flash)
             li: a(href="http://myccnm2012.tumblr.com/", target="_blank") Annual Reports(Social Media)
